--- a/app/config/parameters_dist.yml
+++ b/app/config/parameters_dist.yml
@@ -25,6 +25,10 @@ parameters:
       
     # Master secret
     hexaa_master_secrets:
+        # you can generate a secret using:
+        # tr -c -d '0123456789abcdefghijklmnopqrstuvwxyz' </dev/urandom | dd bs=40 count=1 2>/dev/null;echo
+        # format:
+        # generatedMasterKey: masterKeyHookClassName
         # for GUI use
         InsertSomeSecretHere: defaultMasterKey
         # others (use MasterKeyHook!)
@@ -38,6 +42,6 @@ parameters:
       - localhost
     
     # Prefix of entitlements. should be something like urn:geant:server.org:hexaa:service_id:sometext, of which :service_id:sometext should be omitted here.
-    # Note: do not write ':' at the end below!
+    # Note: do not write ':' at the end!
     hexaa_entitlement_uri_prefix: urn:geant:server.org:hexaa
     
