work complete, needs thorough testing.

--- a/app/config/hexaa_entityids_dist.yml
+++ b/app/config/hexaa_entityids_dist.yml
@@ -1,4 +1,6 @@
 parameters:
     # Insert service entityids here.
     hexaa_service_entityids:
-        - https://example.com/ssp
+        https://example.com/ssp: 
+            - admin1@doma.in
+            - admin1@doma.in
