--- a/app/config/hexaa_entityids_dist.yml
+++ b/app/config/hexaa_entityids_dist.yml
@@ -2,5 +2,6 @@ parameters:
     # Insert service entityids here.
     hexaa_service_entityids:
         https://example.com/ssp: 
-            - admin1@doma.in
-            - admin1@doma.in
+            tech@doma.in: technical
+            admin@doma.in: administrator
+            support@doma.in: support
