rename HexaaController to GlobalController for we have other plans for HexaaController

--- a/src/Hexaa/ApiBundle/Resources/config/routing.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/routing.yml
@@ -61,6 +61,6 @@ other:
     type:     rest
     resource: "Hexaa\ApiBundle\Controller\RestController"
     
-hexaa:
+global:
     type:     rest
     resource: "Hexaa\ApiBundle\Controller\HexaaController"
