--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,6 @@
     "minimum-stability": "stable",
     "extra": {
         "symfony-app-dir": "app",
-        "symfony-web-dir": "web",
+        "symfony-web-dir": "web"
     }
 }
