--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -120,6 +120,28 @@ nelmio_api_doc:
                 xml: application/xml
             default_format: json
 
+nelmio_cors:
+    defaults:
+        allow_credentials: false
+        allow_origin: []
+        allow_headers: []
+        allow_methods: []
+        expose_headers: []
+        max_age: 0
+        hosts: []
+    paths:
+        '^/api/':
+            allow_origin: %hexaa_cors_origins%
+            allow_headers: ['X-Hexaa-Auth']
+            allow_methods: ['PATCH', 'POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
+#        '^/':
+#            allow_origin: ['*']
+#            allow_headers: ['X-Custom-Auth']
+#            allow_methods: ['PATCH', 'POST', 'PUT', 'GET', 'DELETE']
+#            max_age: 3600
+#            hosts: ['^api\.']
+
 bazinga_hateoas: ~
 
 bazinga_rest_extra: ~
