--- a/app/config/parameters_dist.yml
+++ b/app/config/parameters_dist.yml
@@ -38,9 +38,11 @@ parameters:
     # Set to false to disable consent check upon attribute release
     hexaa_consent_module: true
     
-    # GetToken valid IPs:
-    hexaa_get_token_ips:
-      - localhost
+    # CORS origins
+    # Array of regular expressions which defines CORS origins for /api/*
+    # More on the topic: http://en.wikipedia.org/wiki/Cross-origin_resource_sharing
+    hexaa_cors_origins:
+        - "https://hexaa.gui.host"
     
     #####
     # Prefix of entitlements. 
