--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "hautelook/templated-uri-bundle": "~1.0",
         "willdurand/rest-extra-bundle": "~1.0",
         "egulias/email-validator":"1.2.2",
-        "rhumsaa/uuid": "2.7.*"
+        "rhumsaa/uuid": "2.7.*",
+        "nelmio/cors-bundle": "1.3.3"
     },
     "conflict": {
         "symfony/routing": "2.4.1"
