--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -132,7 +132,7 @@ nelmio_cors:
     paths:
         '^/api/':
             allow_origin: %hexaa_cors_origins%
-            allow_headers: ['X-Hexaa-Auth']
+            allow_headers: ['X-Hexaa-Auth', 'accept', 'content-type']
             allow_methods: ['PATCH', 'POST', 'PUT', 'GET', 'DELETE']
             max_age: 3600
 #        '^/':
