remove some invalid default values + improve docs

--- a/app/config/hexaa_entityids_dist.yml
+++ b/app/config/hexaa_entityids_dist.yml
@@ -1,13 +1,13 @@
 parameters:
     # Insert service entityids here.
     hexaa_service_entityids:
-        https://example.com/ssp: 
-            - type: technical
-              email: tech@doma.in
-              surName: Techie Team
-            - type: administration
-              email: admin@doma.in
-              surName: Admin Team
-            - type: support
-              email: support@doma.in
-              surName: Support Team
+#        https://example.com/ssp:
+#            - type: technical
+#              email: tech@doma.in
+#              surName: Techie Team
+#            - type: administration
+#              email: admin@doma.in
+#              surName: Admin Team
+#            - type: support
+#              email: support@doma.in
+#              surName: Support Team
