--- a/composer.json
+++ b/composer.json
@@ -1,65 +1,68 @@
 {
-    "name": "hexaa/hexaa-backend",
-    "license": "Apache-2.0",
-    "type": "project",
-    "description": "HEXAA virtual organization management software",
-    "autoload": {
-        "psr-0": { "": "src/" }
-    },
-    "require": {
-        "php": ">=5.3.3",
-        "ext-curl" : "*",
-        "ext-intl" : "*",
-        "ext-mcrypt" : "*",
-        "ext-mysql" : "*",
-        "lib-curl" : "*",
-        "symfony/symfony": "2.5.*",
-        "symfony/icu": "1.0.*",
-        "doctrine/orm": "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle": "1.2.*",
-        "twig/extensions": "1.0.*",
-        "symfony/assetic-bundle": "2.3.*",
-        "symfony/swiftmailer-bundle": "2.3.*",
-        "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "2.3.*",
-        "sensio/framework-extra-bundle": "2.3.*",
-        "sensio/generator-bundle": "2.3.*",
-        "jms/serializer-bundle": "0.13.*",
-        "friendsofsymfony/rest-bundle": "1.4.*",
-        "nelmio/api-doc-bundle": "2.7.*@dev",
-        "friendsofsymfony/http-cache-bundle": "~1.1.0",
-        "willdurand/hateoas-bundle": "0.2.*",
-        "hautelook/templated-uri-bundle": "~1.0",
-        "willdurand/rest-extra-bundle": "~1.0",
-        "egulias/email-validator":"1.2.2",
-        "rhumsaa/uuid": "2.7.*",
-        "nelmio/cors-bundle": "1.3.3"
-    },
-    "conflict": {
-        "symfony/routing": "2.4.1"
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "php vendor/sensio/distribution-bundle/Sensio/Bundle/DistributionBundle/Resources/bin/build_bootstrap.php"
-        ],
-        "post-update-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "php vendor/sensio/distribution-bundle/Sensio/Bundle/DistributionBundle/Resources/bin/build_bootstrap.php"
-
-
-        ]
-    },
-    "config": {
-        "bin-dir": "bin"
-    },
-    "minimum-stability": "stable",
-    "extra": {
-        "symfony-app-dir": "app",
-        "symfony-web-dir": "web"
-    }
+  "name": "hexaa/hexaa-backend",
+  "license": "Apache-2.0",
+  "type": "project",
+  "description": "HEXAA virtual organization management software",
+  "autoload": {
+    "psr-0": {"": "src/"}
+  },
+  "require": {
+    "php": ">=5.3.3",
+    "ext-curl": "*",
+    "ext-intl": "*",
+    "ext-mcrypt": "*",
+    "ext-mysql": "*",
+    "lib-curl": "*",
+    "symfony/symfony": "2.5.*",
+    "symfony/icu": "1.0.*",
+    "doctrine/orm": "~2.2,>=2.2.3",
+    "doctrine/doctrine-bundle": "1.2.*",
+    "twig/extensions": "1.0.*",
+    "symfony/assetic-bundle": "2.3.*",
+    "symfony/swiftmailer-bundle": "2.3.*",
+    "symfony/monolog-bundle": "~2.4",
+    "sensio/distribution-bundle": "2.3.*",
+    "sensio/framework-extra-bundle": "2.3.*",
+    "sensio/generator-bundle": "2.3.*",
+    "jms/serializer-bundle": "0.13.*",
+    "friendsofsymfony/rest-bundle": "1.4.*",
+    "nelmio/api-doc-bundle": "2.7.*@dev",
+    "friendsofsymfony/http-cache-bundle": "~1.1.0",
+    "willdurand/hateoas-bundle": "0.2.*",
+    "hautelook/templated-uri-bundle": "~1.0",
+    "willdurand/rest-extra-bundle": "~1.0",
+    "egulias/email-validator": "1.2.2",
+    "rhumsaa/uuid": "2.7.*",
+    "nelmio/cors-bundle": "1.3.3"
+  },
+  "conflict": {
+    "symfony/routing": "2.4.1"
+  },
+  "scripts": {
+    "pre-install-cmd": [
+      "bash create_config.sh"
+    ],
+    "post-install-cmd": [
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+      "php vendor/sensio/distribution-bundle/Sensio/Bundle/DistributionBundle/Resources/bin/build_bootstrap.php",
+      "bash post-update.sh"
+    ],
+    "post-update-cmd": [
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+      "php vendor/sensio/distribution-bundle/Sensio/Bundle/DistributionBundle/Resources/bin/build_bootstrap.php",
+      "bash post-update.sh"
+    ]
+  },
+  "config": {
+    "bin-dir": "bin"
+  },
+  "minimum-stability": "stable",
+  "extra": {
+    "symfony-app-dir": "app",
+    "symfony-web-dir": "web"
+  }
 }
