--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ tokenkeygen*
 !/src/Hexaa/ApiBundle/Hook/MasterKeyHook/defaultMasterKey.php
 !/src/Hexaa/ApiBundle/Hook/MasterKeyHook/iMasterKeyHook.php
 /app/bootstrap.php.cache
+/app/SymfonyRequirements.php
