enable Location header in CORS response

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -134,7 +134,7 @@ nelmio_cors:
     paths:
         '^/api/':
             allow_origin: %hexaa_cors_origins%
-            allow_headers: ['X-Hexaa-Auth', 'accept', 'content-type']
+            allow_headers: ['X-Hexaa-Auth', 'accept', 'content-type', 'location']
             allow_methods: ['PATCH', 'POST', 'PUT', 'GET', 'DELETE']
             max_age: 3600
 
