--- a/app/config/parameters_dist.yml
+++ b/app/config/parameters_dist.yml
@@ -45,13 +45,18 @@ parameters:
     # More on the topic: http://en.wikipedia.org/wiki/Cross-origin_resource_sharing
     hexaa_cors_origins:
         - "nullstring"
-    
-    #####
+
     # Prefix of entitlements. 
     # Please note, that using the urn:geant namespace requires registration:
     # http://geant2.archive.geant.net/server/show/nav.00d00800j003004.html
     # Note: do not write ':' at the end!
     hexaa_entitlement_uri_prefix: some:entitlement:prefix:hexaa
+
+    # Number of days after which principals get deleted
+    # This is counted from the last login
+    # Set to -1 to turn off deletion
+    # Default: 5 years + 2 weeks
+    hexaa_principal_expiration_limit: 1839
 
 
     ##########################################################################
