--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,9 +63,9 @@ doctrine:
 # Swiftmailer Configuration
 swiftmailer:
     transport: %mailer_transport%
-    #host:      %mailer_host%
-    #username:  %mailer_user%
-    #password:  %mailer_password%
+    host:      %mailer_host%
+    username:  %mailer_user%
+    password:  %mailer_password%
     #spool:     { type: memory }
 
 sensio_framework_extra:
