--- a/src/Hexaa/ApiBundle/Resources/config/services.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/services.yml
@@ -22,10 +22,6 @@ parameters:
 # EventListeners
     hexaa_check_policy_listener.class:      Hexaa\ApiBundle\EventListener\CheckPolicyListener
 
-# Validators
-    attribute_spec_by_user_and_id.class:    Hexaa\ApiBundle\Validator\Constraints\AttributeSpecByUserAndIdValidator
-    hexaa_unique_entityid_validator.class:  Hexaa\ApiBundle\Validator\Constraints\ValidEntityidValidator
-
 services:
 
 # Hooks
@@ -79,51 +75,51 @@ services:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
 
 # Validators
-    validator.uniquie.valid_entityid:
-        class: %hexaa_unique_entityid_validator.class%
+    validator.unique.valid_entityid:
+        class: Hexaa\ApiBundle\Validator\Constraints\ValidEntityidValidator
         tags:
             - { name: validator.constraint_validator, alias: validentityid }
         arguments: [%hexaa_service_entityids%]
-    validator.uniquie.invitation_has_valid_target:
+    validator.unique.invitation_has_valid_target:
         class: Hexaa\ApiBundle\Validator\Constraints\InvitationHasValidTargetValidator
         tags:
             - { name: validator.constraint_validator, alias: invitation_has_valid_target }
         arguments: [ @doctrine.orm.entity_manager, @security.token_storage, %hexaa_admins% ]
-    validator.uniquie.attribute_spec_by_user_and_id:
-        class: %attribute_spec_by_user_and_id.class%
+    validator.unique.attribute_spec_by_user_and_id:
+        class: Hexaa\ApiBundle\Validator\Constraints\AttributeSpecByUserAndIdValidator
         tags:
             - { name: validator.constraint_validator, alias: attribute_spec_by_user_and_id }
         arguments: [ "@doctrine.orm.entity_manager", "@security.token_storage" ]
-    validator.uniquie.service_exists_and_wants_attribute:
+    validator.unique.service_exists_and_wants_attribute:
         class: Hexaa\ApiBundle\Validator\Constraints\ServiceExistsAndWantsAttributeValidator
         tags:
             - { name: validator.constraint_validator, alias: service_exists_and_wants_attribute }
         arguments: [ "@doctrine.orm.entity_manager", "@security.token_storage" ]
-    validator.uniquie.principal_can_be_added_to_role:
+    validator.unique.principal_can_be_added_to_role:
         class: Hexaa\ApiBundle\Validator\Constraints\PrincipalCanBeAddedToRoleValidator
         tags:
             - { name: validator.constraint_validator, alias: principal_can_be_added_to_role }
         arguments: [ "@doctrine.orm.entity_manager", "@security.token_storage" ]
-    validator.uniquie.entitlement_can_be_added_to_role:
+    validator.unique.entitlement_can_be_added_to_role:
         class: Hexaa\ApiBundle\Validator\Constraints\EntitlementCanBeAddedToRoleValidator
         tags:
             - { name: validator.constraint_validator, alias: entitlement_can_be_added_to_role }
         arguments: [ "@doctrine.orm.entity_manager", "@security.token_storage" ]
-    validator.uniquie.entitlement_uri:
+    validator.unique.entitlement_uri:
         class: Hexaa\ApiBundle\Validator\Constraints\EntitlementURIValidator
         tags:
             - { name: validator.constraint_validator, alias: entitlement_uri }
         arguments: [ %hexaa_entitlement_uri_prefix% ]
-    validator.uniquie.manager_is_organization_member:
+    validator.unique.manager_is_organization_member:
         class: Hexaa\ApiBundle\Validator\Constraints\ManagerIsOrganizationMemberValidator
         tags:
             - { name: validator.constraint_validator, alias: manager_is_organization_member }
-    validator.uniquie.new_entitlement_pack_is_not_private:
+    validator.unique.new_entitlement_pack_is_not_private:
         class: Hexaa\ApiBundle\Validator\Constraints\NewEntitlementPackIsEnabledAndNotPrivateValidator
         tags:
             - { name: validator.constraint_validator, alias: new_entitlement_pack_is_not_private }
         arguments: [ "@doctrine.orm.entity_manager", "@security.token_storage" ]
-    validator.uniquie.sp_contact_mail:
+    validator.unique.sp_contact_mail:
         class: Hexaa\ApiBundle\Validator\Constraints\SPContactMailValidator
         tags:
             - { name: validator.constraint_validator, alias: sp_contact_mail }
