default log dir set to app/logs

--- a/app/config/parameters_dist.yml
+++ b/app/config/parameters_dist.yml
@@ -22,7 +22,7 @@ parameters:
     
     # HEXAA log directory
     # note: don't write / at the end!
-    hexaa_log_dir: /var/log/hexaa
+    hexaa_log_dir: app/logs
       
     # Master secret
     hexaa_master_secrets:
