--- a/src/Hexaa/ApiBundle/Resources/config/routing.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/routing.yml
@@ -64,3 +64,7 @@ other:
 global:
     type:     rest
     resource: "Hexaa\ApiBundle\Controller\GlobalController"
+
+security_domain:
+    type:     rest
+    resource: "Hexaa\ApiBundle\Controller\SecurityDomainController"
