implement validation and security check for message call. TODO: implement e-mail sending.

--- a/src/Hexaa/ApiBundle/Resources/config/services.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/services.yml
@@ -80,6 +80,13 @@ services:
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
 
+# Forms
+    hexaa.message.form:
+        class: Hexaa\StorageBundle\Form\MessageType
+        arguments: [ "@doctrine.orm.entity_manager" ]
+        tags:
+            - { name: form.type, alias: message }
+
 # Validators
     validator.unique.valid_entityid:
         class: Hexaa\ApiBundle\Validator\Constraints\ValidEntityidValidator
