--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -9,10 +9,10 @@ web_profiler:
     toolbar: true
     intercept_redirects: false
 
-jns_xhprof:
-    location_web:    http://localhost/xhprof
-    enabled:         true
-    skip_builtin_functions: true
+#jns_xhprof:
+#    location_web:    http://localhost/xhprof
+#    enabled:         true
+#    skip_builtin_functions: true
 
 monolog:
     channels:
