--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "egulias/email-validator": "1.2.2",
     "rhumsaa/uuid": "2.7.*",
     "nelmio/cors-bundle": "1.3.3",
-    "jms/translation-bundle": "1.1.x"
+    "jms/translation-bundle": "1.1.x",
+    "moontoast/math": "1.1.0"
   },
   "require-dev": {
     "jns/xhprof-bundle": "1.0.*@dev",
